# autotools-template

./: Makefile.am  Makefile.am.coverage  README.md  autogen.sh  configure.ac
include/: Makefile.am  mylibrary.h
src/: Makefile.am  main.c  myextrafeature.c  mylibrary.c
tests/: Makefile.am  mylibrary.cpp
